  David Gálvez. (VRI)
- Makefile: Fixed "Unknown ColdFire Machine" non-fatal error when doing
  "make coldfire-sources". (VRI)
- po/de.po: Updated German translation. (THH)

2013-05-07
- bios/linea.S: Fixed compilation with binutils 2.9.1. (VRI)
- aes/gemgraf.c include/compat.h: Code cleanup: eliminate LHIBT() &
  LLOBT() macros. (RFB)
- desk/deskact.c desk/desksupp.c desk/deskwin.c include/compat.h:
  Code cleanup: eliminate LPOINTER macro. (RFB)

2013-05-08
- po/fr.po: Updated. (VRI)
- desk/deskinf.c: Fix bug: file info dialog showed residual values for
  number of files/folders. (RFB)
- desk/deskinf.c: Grey out number of files/folders when displaying file
  info. (RFB)
- desk/desktop.def desk/desktop.rsc tools/erd.c: Use common strings for
  number of files/folders. (RFB)

2013-05-10
- bios/natfeat.S bios/xhdi.c: Added comments about the XHDI handler. (VRI)
- po/fr.po: Updated. (VRI)
- po/de.po: Updated. (THH)

2013-05-11
- cli/cmdedit.c: Handle input characters < 0x20 correctly. (RFB)
- cli/Makefile cli/cmd.h cli/cmdasm.S: Eliminate usage of osbind.h. (RFB)

2013-05-12
- po/ru.po: Updated. Contributed by Dima Sobolev. (VRI)
- po/fi.po: Updated. Contributed by Eero Tamminen. (VRI)
- cli/Makefile cli/cmd.h cli/cmdedit.c cli/cmdexec.c cli/cmdint.c
  cli/cmdmain.c cli/cmdparse.c cli/cmdutil.c: Added constness, prepare
  for integration into EmuTOS. (RFB)
- cli/cmdutil.c: Fix strcpy() bug in standalone version. (RFB)
- cli/cmdutil.c: Make redirected text lines from internal commands
  end in cr/lf. (RFB)
- cli/cmdutil.c: Fix cr/lf problem in internal ls command. (RFB)
- Makefile: Integrate new console into EmuTOS. (RFB)

2013-05-13
- po/it.po: Updated. Contributed by Lodovico Zanier. (VRI)
- po/es.po: Updated. Contributed by David Gálvez. (VRI)

2013-05-15
- cli/cmd.h cli/cmdedit.c cli/cmdmain.c: Make console ctl-C behaviour
  like other shells. (RFB)

2013-05-17
- cli/cmdint.c cli/cmdutil.c: Fix bugs in console copy command. (RFB)