@@ -4804,3 +4804,4 @@ Start... early ages
 
 2013-05-17
 - cli/cmdint.c cli/cmdutil.c: Fix bugs in console copy command. (RFB)
+- cli/cmdint.c: Fix bug: move command copied instead of moving. (RFB)
